--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,21 @@
 {
   "name": "Hangout Receptionist",
-  "version": "1.0",
+  "version": "1.0.0",
   "manifest_version": 2,
   "description": "Auto-answer hangout invitations",
+  "background": {
+    "scripts": [ "js/background.js" ]
+  },
   "content_scripts": [
     {
       "matches": ["https://plus.google.com/*"],
       "css": [],
-      "js": ["listener.js"]
+      "js": ["js/listener.js"]
     }
   ],
+  "content_security_policy": "script-src 'self' https://apis.google.com; object-src 'self'",
   "permissions": [
-    "https://plus.google.com/"
+    "https://plus.google.com/",
+    "https://apis.google.com/"
   ]
 }
